--------------------------------------------------------------------------------------------------------------------------------------------
TAG v02-02-00
--------------------------------------------------------------------------------------------------------------------------------------------
PandoraSDK: v02-00-01
PandoraMonitoring: v02-00-00
LArContent: v02-02-00
LCContent: v02-00-01

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v02-01-00
--------------------------------------------------------------------------------------------------------------------------------------------
PandoraSDK: v02-00-01
PandoraMonitoring: v02-00-00
LArContent: v02-01-00
LCContent: v02-00-00

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v02-00-00
--------------------------------------------------------------------------------------------------------------------------------------------
PandoraSDK: v02-00-00
PandoraMonitoring: v02-00-00
LArContent: v02-00-00
LCContent: v02-00-00

--------------------------------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-02-00
--------------------------------------------------------------------------------------------------------------------------------------------
PandoraSDK: v01-00-01
PandoraMonitoring: v01-00-01
LArContent: v01-01-00
LCContent: v01-01-00

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-01-00