@@ -1,0 +1,8 @@
+include(MacroPandoraDisplayStandardVariables)
+include(MacroPandoraGeneratePackageConfigFiles)
+
+include(PandoraDefaultInstallPrefix)
+include(PandoraDefaultBuildType)
+include(PandoraDefaultLibraryVersioning)
+include(PandoraDefaultBuildOutputDirectories)
+include(PandoraDefaultRPathSettings)
