@@ -1,7 +1,7 @@
+# Jan Engels, DESY
 
 # output directories
 SET( EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin" )
 SET( LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib" )
 MARK_AS_ADVANCED( EXECUTABLE_OUTPUT_PATH )
 MARK_AS_ADVANCED( LIBRARY_OUTPUT_PATH )
-
