@@ -1,9 +1,9 @@
-# set default install prefix to project root directory
-# instead of the cmake default /usr/local
+# Jan Engels, DESY
+
+# set default install prefix to project root directory instead of the cmake default /usr/local
 IF( CMAKE_INSTALL_PREFIX STREQUAL "/usr/local" )
     SET( CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}" )
 ENDIF()
 
 # write this variable to cache
 SET( CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}" CACHE PATH "Where to install ${PROJECT_NAME}" FORCE )
-
