@@ -1,9 +1,14 @@
+# Jan Engels, DESY
+
 # add library install path to the rpath list
 SET( CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib" )
 MARK_AS_ADVANCED( CMAKE_INSTALL_RPATH )
 
 # add install path to the rpath list (apple)
 IF( APPLE )
+    SET( CMAKE_MACOSX_RPATH ON )
+    MARK_AS_ADVANCED( CMAKE_MACOSX_RPATH )
+
     SET( CMAKE_INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib" )
     MARK_AS_ADVANCED( CMAKE_INSTALL_NAME_DIR )
 ENDIF()
@@ -11,4 +16,3 @@ ENDIF()
 # append link pathes to rpath list
 SET( CMAKE_INSTALL_RPATH_USE_LINK_PATH 1 )
 MARK_AS_ADVANCED( CMAKE_INSTALL_RPATH_USE_LINK_PATH )
-
