@@ -1,4 +1,13 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v02-03-00
+--------------------------------------------------------------------------------------------------------------------------------------------
+PandoraSDK: v02-01-00
+PandoraMonitoring: v02-01-00
+LArContent: v02-03-00
+LCContent: v02-01-00
+ExampleContent: v02-01-00
+
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v02-02-00
 --------------------------------------------------------------------------------------------------------------------------------------------
 PandoraSDK: v02-00-01
